# TZ_Triumf

./: .gitignore  README.md  docs_docx.7z  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: report.md
docs/practical/: architecture.md  deca-flame-verification.md  deca-integration.md  multiview-reconstruction.md  setup.md
docs/research/: 01-overview.md  02-3dmm.md  03-nerf.md  04-deep-learning.md  05-photogrammetry.md  06-domain-gap.md  07-comparison.md  08-comfyui-masks-meshes.md  09-game-face-textures-masks.md
docs_docx/: 00-index.docx  report.docx
docs_docx/practical/: architecture.docx  deca-flame-verification.docx  deca-integration.docx  multiview-reconstruction.docx  setup.docx
docs_docx/research/: 01-overview.docx  02-3dmm.docx  03-nerf.docx  04-deep-learning.docx  05-photogrammetry.docx  06-domain-gap.docx  07-comparison.docx  08-comfyui-masks-meshes.docx  09-game-face-textures-masks.docx
site/: index.html
site/css/: style.css
site/js/: export.js  main.js  viewer.js
site/models/: deca_baked_detail.glb  deca_detail_neutral.glb  deca_result.glb  flame2023_detail_neutral.glb  flame2023_detail_textured.glb  flame2023_mask_baseline.glb  flame2023_neutral.glb  flame2023_textured.glb
src/: __init__.py
src/reconstruction/: __init__.py  download_assets.py  face_reconstructor.py  flame_decoder_2023.py  main.py  postprocessor.py  preprocessor.py  runtime_check.py
src/visualization/: __init__.py
tests/: test_flame_decoder_2023.py  test_reconstruction_pipeline.py
tools/: markdown_to_docx.py
